# baan

./: .gitignore  Cargo.toml  LICENSE  README  flake.nix  home-manager.nix  package.nix  shell.nix
src/: config.rs  lib.rs  main.rs
