[package]
name = "baan"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.41", default-features = false, features = ["alloc", "clock", "iana-time-zone", "now", "std"] }
clap = { version = "4.5.40", features = ["env", "derive"] }
color-eyre = "0.6.4"
serde = { version = "1.0.219", features = ["derive"] }
tempfile = "3.22.0"
thiserror = "2.0.12"
toml = "0.9.5"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "std", "env-filter"]}
